--- a/app/src/main/res/layout/item_sura.xml
+++ b/app/src/main/res/layout/item_sura.xml
@@ -2,7 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:tool="http://schemas.android.com/tools"
+    android:layout_height="wrap_content"
+    android:background="?android:attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true">
 
     <TextView
         android:id="@+id/tv_sura_name"
@@ -11,7 +15,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:text="Al-Fatihah"
+        tool:text="Al-Fatihah"
         android:textColor="@android:color/primary_text_light"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/tv_name_arabic"
@@ -25,7 +29,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/uthman"
-        android:text="الفاتحة"
+        tool:text="الفاتحة"
         android:textColor="@android:color/primary_text_light"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
-        android:text="Pembukaan"
+        tool:text="Pembukaan"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/tv_sura_name"
         app:layout_constraintStart_toStartOf="@+id/tv_sura_name"
@@ -49,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="1"
+        tool:text="1"
         android:textColor="@android:color/primary_text_light"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
